multi_index_map_derive2/tests/ui/unknown.stderr
error[E0433]: failed to resolve: could not find `multi_index_map` in the list of imported crates
 --> tests/ui/unknown.rs:3:10
  |
3 | #[derive(MultiIndexMap)]
  |          ^^^^^^^^^^^^^ could not find `multi_index_map` in the list of imported crates
  |
  = note: this error originates in the derive macro `MultiIndexMap` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0412]: cannot find type `something_else` in this scope
 --> tests/ui/unknown.rs:5:19
  |
5 |     #[multi_index(something_else)]
  |                   ^^^^^^^^^^^^^^ not found in this scope
